# url_forwarder

./: .gitignore  README.md
extension/: UrlForwarder_v1-0.crx  UrlForwarder_v1-1.crx
extension/chrome/: background.js  manifest.json  options.hml  options.html  options.js  popup.html  popup.js  send_links.js
extension/firefox/: background.js  icon.xcf  manifest.json  options.html  options.js  popup.html  popup.js  send_links.js
host/: README.md  host.json  host.reg
host/mac/: README.md
host/mac/chrome/: eu.irgang.url_forwarder.json  install_host.sh  uninstall_host.sh  url_forwarder_host
host/mac/firefox/: eu.irgang.url_forwarder.json  install_host.sh  uninstall_host.sh  url_forwarder_host
host/windows/chrome/: eu.irgang.url_forwarder.json  install_host.bat  uninstall_host.bat
host/windows/firefox/: eu.irgang.url_forwarder.json  install_host.bat  uninstall_host.bat
url_forwarder_host/: Cargo.toml  README.md
url_forwarder_host/src/: main.rs
